Source/JavaScriptCore/b3/B3Value.cpp
@@ -415,6 +415,8 @@ Effects Value::effects() const
     case CheckMul:
     case Check:
         result.exitsSideways = true;
+        // The program could read anything after exiting, and it's on us to declare this.
+        result.reads = HeapRange::top();
         break;
     case Upsilon:
         result.writesSSAState = true;
